<resources>
    <string name="app_name">BookStoreApp</string>
    <string name="BookID">Book ID</string>
    <string name="Title">Title</string>
    <string name="ISBN">ISBN</string>
    <string name="Author">Author</string>
    <string name="Description">Description</string>
    <string name="Price">Price</string>
    <string name="AddBook">ADD BOOK</string>
    <string name="ClearFields">CLEAR FIELDS</string>
    <string name="setISBN">Set ISBN</string>
    <string name="LoadBook">Load Book</string>
</resources>